kubernetes/deploy/3dp/mainsail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainsail
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: mainsail
    release: mainsail
  type: ClusterIP
