kubernetes/deploy/3dp/mainsail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: mainsail
spec:
  rules:
  - host: mainsail.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: mainsail
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
